--- a/app/src/main/res/layout/character_item.xml
+++ b/app/src/main/res/layout/character_item.xml
@@ -4,16 +4,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="@dimen/item_height"
+    android:background="@android:color/holo_orange_dark">
 
 
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_vertical05"
+            android:id="@+id/guideline_vertical02"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.05" />
+            app:layout_constraintGuide_percent="0.02" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_vertical25"
@@ -23,128 +24,152 @@
             app:layout_constraintGuide_percent="0.25" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_vertical28"
+            android:id="@+id/guideline_vertical275"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:visibility="visible"
-            app:layout_constraintGuide_percent="0.28" />
+            app:layout_constraintGuide_percent="0.275" />
+
+
+
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_vertical30"
+            android:id="@+id/guideline_vertical495"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.30" />
+            app:layout_constraintGuide_percent="0.495" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_vertical70"
+            android:id="@+id/guideline_vertical525"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.70" />
+            app:layout_constraintGuide_percent="0.525" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_vertical48"
+            android:id="@+id/guideline_vertical745"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.48" />
+            app:layout_constraintGuide_percent="0.745" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_vertical51"
+            android:id="@+id/guideline_vertical77"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.51" />
+            app:layout_constraintGuide_percent="0.77" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_vertical71"
+            android:id="@+id/guideline_vertical98"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.71" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_vertical74"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.74" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_vertical94"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.94" />
+            app:layout_constraintGuide_percent="0.98" />
 
 
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_horizontal05"
+            android:id="@+id/guideline_horizontal03"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.05" />
+            app:layout_constraintGuide_percent="0.03" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_horizontal30"
+            android:id="@+id/guideline_horizontal20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.30" />
+            app:layout_constraintGuide_percent="0.20" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_horizontal35"
+            android:id="@+id/guideline_horizontal21"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.35" />
+            app:layout_constraintGuide_percent="0.20" />
+
+    <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_horizontal85"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.82" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_horizontal98"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.95" />
 
 
 
-        <ImageView
-            android:id="@+id/headerImg"
+        <TextView
+            android:id="@+id/levelTxt"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="@id/guideline_horizontal05"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal30"
-            app:layout_constraintStart_toStartOf="@id/guideline_vertical30"
-            app:layout_constraintEnd_toEndOf="@id/guideline_vertical70"
-            app:layout_constraintDimensionRatio="H,2.2:1"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/lvl1" />
+            app:layout_constraintTop_toTopOf="@id/guideline_horizontal03"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal20"
+            app:layout_constraintStart_toStartOf="@id/guideline_vertical275"
+            app:layout_constraintEnd_toEndOf="@id/guideline_vertical745"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="Level 1"
+            android:textSize="@dimen/header_big"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:background="@drawable/cerceve_button"
+            android:fontFamily="@font/justsay"
+            />
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/card1"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal35"
-            app:layout_constraintStart_toStartOf="@id/guideline_vertical05"
+            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal21"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal85"
+            app:layout_constraintStart_toStartOf="@id/guideline_vertical02"
             app:layout_constraintEnd_toEndOf="@id/guideline_vertical25"
             app:layout_constraintDimensionRatio="H,1:1"
+            app:cardBackgroundColor="@color/textdark"
+            android:orientation="vertical"
             app:cardElevation="8dp"
-            app:cardCornerRadius="8dp"
-            android:backgroundTint="@color/transparent"
-            app:cardBackgroundColor="@color/transparent">
+            app:cardCornerRadius="8dp">
 
             <ImageView
                 android:id="@+id/icon1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:onClick="charchoose"
-                android:background="@color/transparent"
-                android:src="@drawable/icon1n1" />
 
+                android:src="@drawable/icon1n1" />
 
         </androidx.cardview.widget.CardView>
 
+    <TextView
+        android:id="@+id/name1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/card1"
+        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal98"
+        app:layout_constraintStart_toStartOf="@id/guideline_vertical02"
+        app:layout_constraintEnd_toEndOf="@id/guideline_vertical25"
+        android:text="Jack"
+        android:textSize="@dimen/text_normal"/>
+
         <androidx.cardview.widget.CardView
+            android:id="@+id/card2"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal35"
-            app:layout_constraintStart_toStartOf="@id/guideline_vertical28"
-            app:layout_constraintEnd_toEndOf="@id/guideline_vertical48"
+            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal21"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal85"
+            app:layout_constraintStart_toStartOf="@id/guideline_vertical275"
+            app:layout_constraintEnd_toEndOf="@id/guideline_vertical495"
+            app:cardBackgroundColor="@color/textdark"
             app:layout_constraintDimensionRatio="H,1:1"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp">
@@ -160,12 +185,26 @@
 
         </androidx.cardview.widget.CardView>
 
+    <TextView
+        android:id="@+id/name2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/card2"
+        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal98"
+        app:layout_constraintStart_toStartOf="@id/guideline_vertical275"
+        app:layout_constraintEnd_toEndOf="@id/guideline_vertical495"
+        android:text="Jack"
+        android:textSize="@dimen/text_normal"/>
+
         <androidx.cardview.widget.CardView
+            android:id="@+id/card3"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal35"
-            app:layout_constraintStart_toStartOf="@id/guideline_vertical51"
-            app:layout_constraintEnd_toEndOf="@id/guideline_vertical71"
+            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal21"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal85"
+            app:layout_constraintStart_toStartOf="@id/guideline_vertical525"
+            app:layout_constraintEnd_toEndOf="@id/guideline_vertical745"
+            app:cardBackgroundColor="@color/textdark"
             app:layout_constraintDimensionRatio="H,1:1"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp">
@@ -180,12 +219,26 @@
 
         </androidx.cardview.widget.CardView>
 
+    <TextView
+        android:id="@+id/name3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/card3"
+        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal98"
+        app:layout_constraintStart_toStartOf="@id/guideline_vertical525"
+        app:layout_constraintEnd_toEndOf="@id/guideline_vertical745"
+        android:text="Jack"
+        android:textSize="@dimen/text_normal"/>
+
         <androidx.cardview.widget.CardView
+            android:id="@+id/card4"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal35"
-            app:layout_constraintStart_toStartOf="@id/guideline_vertical74"
-            app:layout_constraintEnd_toEndOf="@id/guideline_vertical94"
+            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal21"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal85"
+            app:layout_constraintStart_toStartOf="@id/guideline_vertical77"
+            app:layout_constraintEnd_toEndOf="@id/guideline_vertical98"
+            app:cardBackgroundColor="@color/textdark"
             app:layout_constraintDimensionRatio="H,1:1"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp">
@@ -199,6 +252,17 @@
 
 
         </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/name4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/card4"
+        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal98"
+        app:layout_constraintStart_toStartOf="@id/guideline_vertical77"
+        app:layout_constraintEnd_toEndOf="@id/guideline_vertical98"
+        android:text="Jack"
+        android:textSize="@dimen/text_normal"/>
 
 
 
