--- a/app/src/main/res/drawable/cerceve_alert_dialog.xml
+++ b/app/src/main/res/drawable/cerceve_alert_dialog.xml
@@ -5,14 +5,13 @@
     android:shape="rectangle">
     <gradient
 
-        android:startColor="@color/transparent"
-        android:endColor="@color/transparent"
+        android:startColor="@color/orange"
+        android:endColor="@color/orange"
         />
     <corners android:radius="5dp" />
-
-    <stroke android:width="2dp"
-        android:color="@color/black"/>
-
+    <stroke
+        android:width="1dp"
+        android:color="@color/darkgrey" />
 
 
 </shape>
