--- a/app/src/main/res/values-tr/Turkce.xml
+++ b/app/src/main/res/values-tr/Turkce.xml
@@ -70,7 +70,7 @@
     <string name="twoplayersexp">matematik ve futbol!</string>
     <string name="mathgames">Mental Oyunlar</string>
     <string name="mathgamesexp">matematik oyunları oyna!</string>
-    <string name="removeads">ReklamlarI KaldIr</string>
+    <string name="removeads">Pro Versiyon</string>
     <string name="removeadsexp">reklamsız Smart Kids!</string>
 
 
