--- a/app/src/main/res/layout/item_character.xml
+++ b/app/src/main/res/layout/item_character.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/item_height"
+    android:layout_height="@dimen/char_item_height"
     android:background="@android:color/holo_orange_dark"
     android:orientation="vertical">
 
@@ -74,7 +74,7 @@
         app:layout_constraintGuide_percent="0.03" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_horizontal20"
+        android:id="@+id/guideline_horizontal10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -114,7 +114,7 @@
         android:textColor="@color/textsari"
         android:textSize="@dimen/header_big"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal20"
+        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal10"
         app:layout_constraintEnd_toEndOf="@id/guideline_vertical745"
         app:layout_constraintStart_toStartOf="@id/guideline_vertical275"
         app:layout_constraintTop_toTopOf="@id/guideline_horizontal03" />
