--- a/app/src/main/res/layout/item_training.xml
+++ b/app/src/main/res/layout/item_training.xml
@@ -37,7 +37,7 @@
         app:layout_constraintGuide_percent="0.97" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="@id/guideline_horizontal03"
         app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal97"
@@ -52,12 +52,6 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.02" />
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_vertical30a"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.3" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_vertical98a"
@@ -73,29 +67,9 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.03" />
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_horizontal10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.10" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_horizontal50"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.5" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_horizontal67"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.72" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_horizontal70"
+            android:id="@+id/guideline_horizontal75"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -107,19 +81,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.97" />
+            app:layout_constraintGuide_percent="0.95" />
 
-        <ImageView
-            android:id="@+id/iconImg"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal10"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal97a"
-            app:layout_constraintStart_toStartOf="@id/guideline_vertical02a"
-            app:layout_constraintEnd_toEndOf="@id/guideline_vertical30a"
-            app:layout_constraintDimensionRatio="H,1:1"
-            android:src="@drawable/icon_mental"
-            android:onClick="clickEvent"/>
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
@@ -127,71 +91,87 @@
             android:orientation="vertical"
             android:gravity="center_vertical|center_horizontal"
             app:layout_constraintTop_toTopOf="@id/guideline_horizontal03a"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal97a"
-            app:layout_constraintStart_toEndOf="@id/iconImg"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal75"
+            app:layout_constraintStart_toEndOf="@id/guideline_vertical02a"
             app:layout_constraintEnd_toEndOf="@id/guideline_vertical98a">
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline_horizontal70b"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.7" />
+
 
             <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline_horizontal90b"
+                android:id="@+id/guideline_vertical30a"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.9" />
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.3" />
+
+            <ImageView
+                android:id="@+id/iconImg"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/guideline_vertical30a"
+                app:layout_constraintDimensionRatio="H,1:1"
+                android:src="@drawable/icon_mental"
+                android:onClick="clickEvent"/>
 
 
 
             <TextView
                 android:id="@+id/konubaslikTxt"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal90b"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/guideline_vertical30a"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:gravity="center_horizontal|center_vertical"
                 android:fontFamily="@font/justsay"
                 android:textSize="@dimen/header_huge"
                 android:textColor="@color/blue"
                 android:onClick="clickEvent"
                 android:textStyle="bold"
-                android:text="toplama"/>
+                android:text="toplama\ncıkarma"/>
 
 
-            <ProgressBar
-                android:id="@+id/pointsbar"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintTop_toBottomOf="@id/guideline_horizontal70b"
-                app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal90b"
-                android:background="@drawable/siklarclicked"
-                android:max="100"
-                android:onClick="clickEvent"
-                android:progressDrawable="@drawable/horizontal_progress_bar2"
-                android:visibility="visible" />
-
-            <Button
-                android:id="@+id/progressTxt"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintTop_toBottomOf="@id/guideline_horizontal70b"
-                app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal90b"
-                android:background="@android:color/transparent"
-                android:fontFamily="@font/comic"
-                android:onClick="clickEvent"
-                android:text="40%"
-                android:textAlignment="center"
-                android:textSize="16sp"
-                android:textStyle="bold" />
 
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+        <ProgressBar
+            android:id="@+id/pointsbar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal75"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal97a"
+            app:layout_constraintStart_toStartOf="@id/guideline_vertical02a"
+            app:layout_constraintEnd_toEndOf="@id/guideline_vertical98a"
+            android:background="@drawable/siklarclicked"
+            android:max="100"
+            android:onClick="clickEvent"
+            android:progressDrawable="@drawable/progress2"
+            android:visibility="visible" />
+
+        <Button
+            android:id="@+id/progressTxt"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal75"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal97a"
+            app:layout_constraintStart_toStartOf="@id/guideline_vertical02a"
+            app:layout_constraintEnd_toEndOf="@id/guideline_vertical98a"
+            android:background="@android:color/transparent"
+            android:fontFamily="@font/comic"
+            android:onClick="clickEvent"
+            android:text="40%"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
 
 
