--- a/app/src/main/res/layout/mainmenulayout.xml
+++ b/app/src/main/res/layout/mainmenulayout.xml
@@ -197,7 +197,7 @@
             app:layout_constraintGuide_percent="0.50" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_vertical65"
+            android:id="@+id/guideline_vertical60"
             android:layout_width="1dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -440,7 +440,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal89"
-            app:layout_constraintEnd_toEndOf="@id/guideline_vertical65"
+            app:layout_constraintEnd_toEndOf="@id/guideline_vertical60"
             app:layout_constraintStart_toStartOf="@id/guideline_vertical35"
             app:layout_constraintTop_toTopOf="@id/guideline_horizontal86">
 
@@ -735,7 +735,7 @@
 
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_vertical30"
+            android:id="@+id/guideline_vertical15c"
             android:layout_width="1dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -744,7 +744,7 @@
 
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_vertical70"
+            android:id="@+id/guideline_vertical85c"
             android:layout_width="1dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -799,8 +799,8 @@
             android:textSize="@dimen/text_normal"
             android:textStyle="bold"
             app:layout_constraintDimensionRatio="W,1:3.6"
-            app:layout_constraintEnd_toEndOf="@id/guideline_vertical70"
-            app:layout_constraintStart_toStartOf="@id/guideline_vertical30"
+            app:layout_constraintEnd_toEndOf="@id/guideline_vertical85c"
+            app:layout_constraintStart_toStartOf="@id/guideline_vertical15c"
             app:layout_constraintTop_toBottomOf="@id/guideline_horizontala87"/>
 
 
