--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,7 @@
 
 
     <dimen name="header_huge">48sp</dimen>
+    <dimen name="header_bigger">26sp</dimen>
     <dimen name="header_big">22sp</dimen>
     <dimen name="text_normal">16sp</dimen>
     <dimen name="char_item_height">200dp</dimen>
