--- a/app/src/main/res/drawable/cerceve_alert_dialog.xml
+++ b/app/src/main/res/drawable/cerceve_alert_dialog.xml
@@ -10,8 +10,8 @@
         />
     <corners android:radius="5dp" />
     <stroke
-        android:width="1dp"
-        android:color="@color/darkgrey" />
+        android:width="2dp"
+        android:color="@color/black" />
 
 
 </shape>
