--- a/app/src/main/res/layout-sw350dp/dortislemlayout.xml
+++ b/app/src/main/res/layout-sw350dp/dortislemlayout.xml
@@ -77,7 +77,7 @@
                         android:layout_gravity="center_vertical"
                         android:text=" ÷ "
                         android:background="@android:color/transparent"
-                        android:textSize="@dimen/soruoperator" />
+                        android:textSize="@dimen/sorunumarasi" />
 
                     <TextView
                         android:id="@+id/sayi2Txtv"
