--- a/app/src/main/res/layout/four_opt_layout.xml
+++ b/app/src/main/res/layout/four_opt_layout.xml
@@ -5,12 +5,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/holo_orange_dark">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_horizontal01"
-        android:layout_width="1dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.01" />
+
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_vertical05"
@@ -26,7 +21,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.03" />
-
 
 
     <androidx.constraintlayout.widget.Guideline
@@ -45,8 +39,6 @@
         app:layout_constraintGuide_percent="0.14" />
 
 
-
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_vertical95"
         android:layout_width="1dp"
@@ -54,27 +46,31 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.98" />
 
-
-
-
-    <ImageView
-        android:id="@+id/smartheader"
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/sorunumarasıBtn"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:contentDescription="@string/content_description"
-        android:scaleType="centerInside"
-        android:src="@drawable/smartkidsheader"
-        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal14"
-        app:layout_constraintTop_toTopOf="@id/guideline_horizontal01" />
+        android:gravity="center_horizontal|center_vertical"
+        android:text="Soru 1"
+        android:textColor="@color/textdark"
+        android:textSize="@dimen/sorunumarasi"
+        android:background="@color/transparent"
+        android:textStyle="bold"
+        android:fontFamily="@font/justsay"
+        app:layout_constraintTop_toTopOf="@id/guideline_horizontal03"
+        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal14"/>
+
+
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/soru_main"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="@id/guideline_vertical05"
-        app:layout_constraintEnd_toEndOf="@id/guideline_vertical95"
         app:layout_constraintBottom_toTopOf="@id/ad_container"
-        app:layout_constraintTop_toBottomOf="@id/smartheader">
+        app:layout_constraintEnd_toEndOf="@id/guideline_vertical95"
+        app:layout_constraintStart_toStartOf="@id/guideline_vertical05"
+        app:layout_constraintTop_toBottomOf="@id/sorunumarasıBtn">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_vertical15"
@@ -132,28 +128,15 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.92" />
 
-        <TextView
-            android:id="@+id/sorunumarasıTxtv"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintStart_toStartOf="@id/guideline_vertical15"
-            app:layout_constraintEnd_toEndOf="@id/guideline_vertical85"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal10b"
-            app:layout_constraintTop_toTopOf="parent"
-            android:gravity="center_horizontal|center_vertical"
-            android:text="Soru 1"
-            android:textColor="@color/textdark"
-            android:textSize="@dimen/sorunumarasi"
-            android:textStyle="bold"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/sorusayilarlayout"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal27b"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal12b"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal27b">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal12b">
 
 
             <androidx.constraintlayout.widget.Guideline
@@ -184,51 +167,50 @@
                 android:orientation="vertical"
                 app:layout_constraintGuide_percent="0.90" />
 
-            <TextView
-                android:id="@+id/sayi1Txtv"
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/sayi1Btn"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintTop_toTopOf="parent"
+                android:background="@drawable/edittext"
+                android:gravity="center_horizontal|center_vertical"
+                android:text="36"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="@dimen/sorusayilar"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintDimensionRatio="H,1:1"
                 app:layout_constraintEnd_toEndOf="@id/guideline_vertical40"
-                app:layout_constraintDimensionRatio="H,1:1"
-                android:background="@drawable/edittext"
-                android:gravity="center_horizontal|center_vertical"
-                android:text="36"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="@dimen/sorusayilar"
-                android:textStyle="bold" />
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/sayi2Txtv"
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/sayi2Btn"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@id/guideline_vertical60"
-                app:layout_constraintDimensionRatio="H,1:1"
                 android:background="@drawable/edittext"
                 android:gravity="center_horizontal|center_vertical"
                 android:text="36"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="@dimen/sorusayilar"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintDimensionRatio="H,1:1"
+                app:layout_constraintStart_toStartOf="@id/guideline_vertical60"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/sembolBtn"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@id/guideline_vertical40"
-                app:layout_constraintEnd_toStartOf="@id/guideline_vertical60"
-                app:layout_constraintDimensionRatio="H,1:1"
+                android:background="@android:color/transparent"
                 android:gravity="center_horizontal|center_vertical"
                 android:text=" ÷ "
-                android:background="@android:color/transparent"
-                android:textSize="@dimen/soruoperator"/>
-
+                android:textSize="@dimen/sorunumarasi"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintDimensionRatio="H,1:1"
+                app:layout_constraintEnd_toStartOf="@id/guideline_vertical60"
+                app:layout_constraintStart_toStartOf="@id/guideline_vertical40"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -237,10 +219,10 @@
             android:id="@+id/siklarlayout"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal80b"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal40b"
-            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal80b">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal40b">
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline_vertical15c"
@@ -291,58 +273,57 @@
                 android:orientation="horizontal"
                 app:layout_constraintGuide_percent="0.63" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/sikaBtn"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintStart_toStartOf="@id/guideline_vertical15c"
-                app:layout_constraintEnd_toEndOf="@id/guideline_vertical45c"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal28c"
                 android:background="@drawable/siklar"
                 android:onClick="cevapla"
                 android:text="18"
-                android:textSize="@dimen/siklar" />
+                android:textSize="@dimen/siklar"
+                app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal28c"
+                app:layout_constraintEnd_toEndOf="@id/guideline_vertical45c"
+                app:layout_constraintStart_toStartOf="@id/guideline_vertical15c"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/sikbBtn"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintStart_toStartOf="@id/guideline_vertical55c"
-                app:layout_constraintEnd_toEndOf="@id/guideline_vertical85c"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal28c"
                 android:background="@drawable/siklar"
                 android:onClick="cevapla"
                 android:text="18"
-                android:textSize="@dimen/siklar" />
+                android:textSize="@dimen/siklar"
+                app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal28c"
+                app:layout_constraintEnd_toEndOf="@id/guideline_vertical85c"
+                app:layout_constraintStart_toStartOf="@id/guideline_vertical55c"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/sikcBtn"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintStart_toStartOf="@id/guideline_vertical55c"
-                app:layout_constraintEnd_toEndOf="@id/guideline_vertical85c"
-                app:layout_constraintTop_toTopOf="@id/guideline_horizontal35c"
-                app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal63c"
                 android:background="@drawable/siklar"
                 android:onClick="cevapla"
                 android:text="18"
-                android:textSize="@dimen/siklar" />
+                android:textSize="@dimen/siklar"
+                app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal63c"
+                app:layout_constraintEnd_toEndOf="@id/guideline_vertical85c"
+                app:layout_constraintStart_toStartOf="@id/guideline_vertical55c"
+                app:layout_constraintTop_toTopOf="@id/guideline_horizontal35c" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/sikdBtn"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintStart_toStartOf="@id/guideline_vertical15c"
-                app:layout_constraintEnd_toEndOf="@id/guideline_vertical45c"
-                app:layout_constraintTop_toTopOf="@id/guideline_horizontal35c"
-                app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal63c"
                 android:background="@drawable/siklar"
                 android:onClick="cevapla"
                 android:text="18"
-                android:textSize="@dimen/siklar" />
-
+                android:textSize="@dimen/siklar"
+                app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal63c"
+                app:layout_constraintEnd_toEndOf="@id/guideline_vertical45c"
+                app:layout_constraintStart_toStartOf="@id/guideline_vertical15c"
+                app:layout_constraintTop_toTopOf="@id/guideline_horizontal35c" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -351,10 +332,10 @@
             android:id="@+id/nextbutonslayout"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal88b"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal88b">
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline_vertical05d"
@@ -402,66 +383,59 @@
                 android:id="@+id/tamamlaBtn"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="@id/guideline_vertical35d"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_centerVertical="true"
                 android:background="@drawable/nextbuttongroup"
                 android:fontFamily="@font/comic"
                 android:onClick="tamamla"
                 android:text="@string/testibitir"
-                android:layout_centerVertical="true"
                 android:textAllCaps="false"
                 android:textSize="@dimen/testibitir"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/guideline_vertical35d"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/skorTxv"
+                android:id="@+id/skorBtn"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintStart_toStartOf="@id/guideline_vertical38d"
-                app:layout_constraintEnd_toEndOf="@id/guideline_vertical62d"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:textAllCaps="false"
-                android:text="@string/skor"
-                android:fontFamily="@font/comic"
-                android:textAlignment="center"
-                android:textColor="@android:color/black"
-                android:background="@drawable/siklarclicked"
                 android:layout_centerHorizontal="true"
+                android:background="@drawable/siklarclicked"
+                android:fontFamily="@font/comic"
+                android:text="@string/skor"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textColor="@android:color/black"
                 android:textSize="@dimen/skorpuanı"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/guideline_vertical62d"
+                app:layout_constraintStart_toStartOf="@id/guideline_vertical38d"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/nextquestionBtn"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintStart_toStartOf="@id/guideline_vertical65d"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_centerVertical="true"
                 android:background="@drawable/nextbuttongroup"
                 android:fontFamily="@font/comic"
                 android:onClick="nextquestion"
                 android:text="@string/sonrakisoru"
-                android:layout_centerVertical="true"
                 android:textAllCaps="false"
                 android:textSize="@dimen/nextquestion"
-                android:textStyle="bold" />
-
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/guideline_vertical65d"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
 
     <FrameLayout
