--- a/app/src/main/res/layout/item_training.xml
+++ b/app/src/main/res/layout/item_training.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/char_item_height"
-    android:onClick="clickEvent">
+    android:layout_height="@dimen/char_item_height">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_vertical05"
