--- a/app/src/main/res/layout-sw350dp/dortislemlayout.xml
+++ b/app/src/main/res/layout-sw350dp/dortislemlayout.xml
@@ -257,7 +257,7 @@
             android:gravity="center_horizontal|center_vertical"
             android:orientation="vertical"
             android:layout_above="@id/adView"
-            android:visibility="visible"
+            android:visibility="gone"
             android:layout_margin="30dp"
             android:layout_alignParentBottom="true"
             android:background="@drawable/frame4">
@@ -328,7 +328,7 @@
             android:layout_above="@id/adView"
             android:layout_alignParentTop="true"
             android:orientation="vertical"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <ImageView
                 android:layout_width="280dp"
