--- a/app/src/main/res/layout/mainmenulayout.xml
+++ b/app/src/main/res/layout/mainmenulayout.xml
@@ -66,7 +66,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toTopOf="@id/ad_container"
-        android:visibility="gone">
+        android:visibility="visible">
 
 
         <androidx.constraintlayout.widget.Guideline
@@ -85,7 +85,7 @@
             app:layout_constraintGuide_percent="0.18" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_horizontal30"
+            android:id="@+id/guideline_horizontal20"
             android:layout_width="1dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -235,7 +235,7 @@
                 android:id="@+id/characterview"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal30"
+                app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal20"
                 app:layout_constraintDimensionRatio="W,1:1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -627,7 +627,7 @@
         android:id="@+id/charchooselayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/guideline_horizontal14"
         app:layout_constraintBottom_toTopOf="@id/ad_container">
 
