--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
 
 
     <dimen name="header_huge">48sp</dimen>
+    <dimen name="header_less_huge">36sp</dimen>
     <dimen name="header_bigger">26sp</dimen>
     <dimen name="header_biggest">32sp</dimen>
     <dimen name="header_big">22sp</dimen>
@@ -18,6 +19,9 @@
     <dimen name="slider_item_height">250dp</dimen>
     <dimen name="alert_dialog_height">350dp</dimen>
     <dimen name="alert_results_height">450dp</dimen>
+
+
+
 
 
 </resources>
